--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,12 @@ version: "3.9"
 
 services:
   wifi-radar:
-    container_name: wifi_radar
     build: .
+    container_name: wifi_radar
+    environment:
+      - TZ=Europe/Madrid
     restart: unless-stopped
+
 
     # Required to access wlan0 and RSSI info
     network_mode: host
